# Synapic

./: CHANGELOG.md  install.bat  install.ps1  launch_gui.bat  launch_gui_log.bat  main.py  pyproject.toml  requirements.txt  rewrite_step2.py
.claw/sessions/53542ba1180bbbe7/: session-1775624516165-0.jsonl  session-1775664746942-0.jsonl
src/core/: daminion_api.py  daminion_client.py  huggingface_utils.py  image_processing.py  openrouter_utils.py  processing.py  session.py  upscaler.py
src/integrations/: cerebras_client.py
src/ui/steps/: step1_datasource.py  step2_tagging.py  step3_process.py  step4_results.py  step_dedup.py  step_upscale.py
src/utils/: json_utils.py  registry_config.py
tests/: test_ui_dedup.py
tests/unit/: test_daminion_client_version_control.py  test_dedup_strategies.py  test_hash_comparison.py  test_model_loading_params.py  test_pagination.py  test_persistence.py  test_upscaler.py
tests/unit/core/dedup/: test_dedup_strategies.py  test_hash_calculator.py  test_hash_comparison.py  test_hash_comparison.py.orig
