[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapic"
version = "0.1.0"
description = "AI-powered DAM tooling for Synapic"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "customtkinter>=5.2.2",
  "requests>=2.32.5",
  "pillow>=9.0.0",
  "piexif>=1.1.3",
  "iptcinfo3>=2.1.4",
  "tqdm>=4.67.1",
  "huggingface_hub>=0.28.0",
  "transformers>=4.57.2",
  "torch>=2.9.1",
  "torchvision>=0.24.1",
  "timm>=1.0.24",
  "accelerate>=1.12.0",
  "qwen-vl-utils>=0.0.14",
  "cerebras_cloud_sdk",
  "protobuf>=6.33.3",
  "sentencepiece>=0.2.1",
  "pyinstaller>=6.18.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
